# api/docs/swagger.yaml
@@ -49,6 +49,15 @@ definitions:
       photo_url:
         type: string
     type: object
+  model.SavedRequestApi:
+    properties:
+      end_time:
+        type: string
+      start_time:
+        type: string
+      twit_id:
+        type: string
+    type: object
   model.TwitResponse:
     properties:
       created_at:
@@ -318,6 +327,78 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Create Twit's Location
+      tags:
+      - TWIT API
+  /v1/twit/main:
+    get:
+      description: Retrieves main twits that are not deleted and match the current
+        time range
+      responses:
+        "200":
+          description: List of twit IDs
+          schema:
+            items:
+              type: string
+            type: array
+        "500":
+          description: Server error
+          schema:
+            type: string
+      summary: Get active main twits
+      tags:
+      - TWIT API
+    post:
+      description: Adds a new main twit with start_time and end_time
+      parameters:
+      - description: Twit details
+        in: body
+        name: info
+        required: true
+        schema:
+          $ref: '#/definitions/model.SavedRequestApi'
+      responses:
+        "200":
+          description: Twit saved successfully
+          schema:
+            type: string
+        "400":
+          description: Invalid data
+          schema:
+            type: string
+        "500":
+          description: Server error
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: Add a main twit
+      tags:
+      - TWIT API
+  /v1/twit/main/{twit_id}:
+    delete:
+      description: Soft deletes a main twit
+      parameters:
+      - description: Twit ID
+        in: path
+        name: twit_id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: Twit deleted successfully
+          schema:
+            type: string
+        "400":
+          description: Invalid twit ID
+          schema:
+            type: string
+        "500":
+          description: Server error
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: Delete a main twit
       tags:
       - TWIT API
   /v1/twit/most-viewed:
